--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.1",
+    "@google/genai": "^1.31.0",
     "lucide-react": "^0.556.0",
-    "react-dom": "^19.2.1",
-    "@google/genai": "^1.31.0"
+    "netlify": "^23.12.3",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
